--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul id="qualifications--list">
           <li>🖖 Running freelance Web Design business since 2021.</li>
           <li>🖖 Growing portfolio of Single Page Web Applications.</li>
-          <li>🖖 Continually learning the full MERN stack</li>
+          <li>🖖 Continually learning the full MERN stack.</li>
         </ul>
       </section>
 
@@ -167,9 +167,8 @@
           </p>
           <ul>
             <li>
-              Answered incoming phone calls and emails to provide first-line
-              investigation and diagnostics to VPN, cable, and internet
-              concerns.
+              Provided first-line investigation and diagnostics to VPN, cable,
+              and internet concerns.
             </li>
             <li>
               Ensured issues are resolved in a timely and successful manner to
@@ -196,7 +195,7 @@
         <div class="card--project">
           <a href="https://mern-356718.web.app/" target="_blank"
             ><span>🏆 </span>Created the same MERN app as above, but hosted the
-            frontend on Firebase and Backend on Heroku instead.</a
+            frontend on Firebase and the backend on Heroku instead.</a
           >
           <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
             >This is the link for the backend. All routes start with "/api/"</a
