Testing meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:url" content="https://sciphr.github.io/ResumeWebsite/" />
+    <meta property="og:image" content="./assets/images/Smaller Portrait.jpg" />
+    <meta property="twitter" content="Resume for Jacob T. Berry" />
+    <meta
+      property="twitter"
+      content="https://sciphr.github.io/ResumeWebsite/"
+    />
+    <meta property="twitter" content="./assets/images/Smaller Portrait.jpg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
