Moved Projects above Work History

--- a/index.html
+++ b/index.html
@@ -77,6 +77,36 @@
         </div>
       </section>
 
+      <section class="section--page">
+        <h2>Projects</h2>
+
+        <div class="card--project">
+          <a
+            href="https://single-upload-mern-sciphr.herokuapp.com/"
+            target="_blank"
+            ><span>🏆 </span>Built a full stack MERN test project that keeps
+            tracks of users and created places.</a
+          >
+        </div>
+
+        <div class="card--project">
+          <a href="https://mern-356718.web.app/" target="_blank"
+            ><span>🏆 </span>Created the same MERN app as above, but hosted the
+            frontend on Firebase and the backend on Heroku instead.</a
+          >
+          <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
+            >This is the link for the backend. All routes start with "/api/"</a
+          >
+        </div>
+
+        <div class="card--project">
+          <a href="https://github.com/Sciphr/nextjsfinal" target="_blank"
+            ><span>🏆 </span>The GitHub repo for a frontend single webpage
+            webapp for keeping track of meetups</a
+          >
+        </div>
+      </section>
+
       <section class="section--page" id="work-history-wrapper">
         <h2>Work History</h2>
         <div class="line-break"></div>
@@ -185,36 +215,6 @@
             </li>
             <li>Rewrote internal support documentation.</li>
           </ul>
-        </div>
-      </section>
-
-      <section class="section--page">
-        <h2>Projects & Accomplishments</h2>
-
-        <div class="card--project">
-          <a
-            href="https://single-upload-mern-sciphr.herokuapp.com/"
-            target="_blank"
-            ><span>🏆 </span>Built a full stack MERN test project that keeps
-            tracks of users and created places.</a
-          >
-        </div>
-
-        <div class="card--project">
-          <a href="https://mern-356718.web.app/" target="_blank"
-            ><span>🏆 </span>Created the same MERN app as above, but hosted the
-            frontend on Firebase and the backend on Heroku instead.</a
-          >
-          <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
-            >This is the link for the backend. All routes start with "/api/"</a
-          >
-        </div>
-
-        <div class="card--project">
-          <a href="https://github.com/Sciphr/nextjsfinal" target="_blank"
-            ><span>🏆 </span>The GitHub repo for a frontend single webpage
-            webapp for keeping track of meetups</a
-          >
         </div>
       </section>
     </div>
