--- a/index.html
+++ b/index.html
@@ -18,9 +18,20 @@
       media="screen"
       href="./styles/main.css"
     />
+    <script src="./scripts.js"></script>
     <title>Jacob Berry Resume</title>
   </head>
   <body>
+    <div class="mode--container">
+      <p class="mode--p">Dark</p>
+      <label class="switch">
+        <input type="checkbox" id="check" onchange="changeFunction()" />
+        <span class="slider round"></span>
+      </label>
+      <p class="mode--p">Light</p>
+    </div>
+
+    
     <div id="container--main">
       <section id="wrapper--hero" class="section--page">
         <img
@@ -85,7 +96,7 @@
             href="https://single-upload-mern-sciphr.herokuapp.com/"
             target="_blank"
             ><span>🏆 </span>Built a full stack MERN test project that keeps
-            tracks of users and created places.</a
+            track of users and created places.</a
           >
         </div>
 
@@ -95,14 +106,14 @@
             frontend on Firebase and the backend on Heroku instead.</a
           >
           <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
-            >This is the link for the backend. All routes start with "/api/"</a
+            >This is the link for the backend. All routes start with "/api/".</a
           >
         </div>
 
         <div class="card--project">
           <a href="https://github.com/Sciphr/nextjsfinal" target="_blank"
             ><span>🏆 </span>The GitHub repo for a frontend single webpage
-            webapp for keeping track of meetups</a
+            webapp for keeping track of meetups.</a
           >
         </div>
       </section>
