--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       <p class="mode--p">Light</p>
     </div>
 
-    
     <div id="container--main">
       <section id="wrapper--hero" class="section--page">
         <img
@@ -42,7 +41,7 @@
         <div>
           <h1 id="user-name">Jacob Berry</h1>
           <p id="bio">
-            Full Stack Web Developer, and Web Designer at
+            Wordpress Designer at
             <a href="https://www.berrywebdesign.com" target="_blank"
               >Berry Web Design</a
             >
@@ -92,6 +91,13 @@
         <h2>Projects</h2>
 
         <div class="card--project">
+          <a href="https://react-portfolio-a67ac.web.app/" target="_blank"
+            ><span>🏆 </span>Portfolio created in React showing off main work
+            projects.</a
+          >
+        </div>
+
+        <div class="card--project">
           <a
             href="https://single-upload-mern-sciphr.herokuapp.com/"
             target="_blank"
@@ -111,9 +117,8 @@
         </div>
 
         <div class="card--project">
-          <a href="https://github.com/Sciphr/nextjsfinal" target="_blank"
-            ><span>🏆 </span>The GitHub repo for a frontend single webpage
-            webapp for keeping track of meetups.</a
+          <a href="https://nextjsfinal.vercel.app/" target="_blank"
+            ><span>🏆 </span>Basic React web app for keeping track of meetups.</a
           >
         </div>
       </section>
