--- a/index.html
+++ b/index.html
@@ -91,34 +91,35 @@
         <h2>Projects</h2>
 
         <div class="card--project">
-          <a href="https://react-portfolio-a67ac.web.app/" target="_blank"
+          <a
+            href="https://jacob-berry-react-portfolio.netlify.app/"
+            target="_blank"
             ><span>🏆 </span>Portfolio created in React showing off main work
             projects.</a
           >
         </div>
 
         <div class="card--project">
-          <a
-            href="https://single-upload-mern-sciphr.herokuapp.com/"
-            target="_blank"
-            ><span>🏆 </span>Built a full stack MERN test project that keeps
-            track of users and created places.</a
+          <a href="https://berry-github-finder.netlify.app/" target="_blank"
+            ><span>🏆 </span>React application for searching GitHub profiles.</a
           >
         </div>
 
         <div class="card--project">
-          <a href="https://mern-356718.web.app/" target="_blank"
-            ><span>🏆 </span>Created the same MERN app as above, but hosted the
-            frontend on Firebase and the backend on Heroku instead.</a
+          <a href="https://berry-job-tracker.up.railway.app/" target="_blank"
+            ><span>🏆 </span>Another React application. This app is used to keep
+            track of job applications.</a
           >
           <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
-            >This is the link for the backend. All routes start with "/api/".</a
+            >First MERN Ecommerce application. Uses Redux and includes an Admin
+            panel.</a
           >
         </div>
 
         <div class="card--project">
           <a href="https://nextjsfinal.vercel.app/" target="_blank"
-            ><span>🏆 </span>Basic React web app for keeping track of meetups.</a
+            ><span>🏆 </span>Basic React web app for keeping track of
+            meetups.</a
           >
         </div>
       </section>
