--- a/index.html
+++ b/index.html
@@ -110,16 +110,12 @@
             ><span>🏆 </span>Another React application. This app is used to keep
             track of job applications.</a
           >
-          <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
-            >First MERN Ecommerce application. Uses Redux and includes an Admin
-            panel.</a
-          >
         </div>
 
         <div class="card--project">
-          <a href="https://nextjsfinal.vercel.app/" target="_blank"
-            ><span>🏆 </span>Basic React web app for keeping track of
-            meetups.</a
+          <a href="https://mern-app-test-sciphr.herokuapp.com/" target="_blank"
+            ><span>🏆 </span>First MERN Ecommerce application. Uses Redux and
+            includes an Admin panel.</a
           >
         </div>
       </section>
